--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,7 +1,7 @@
 # this file exists to generate techdocs for Backstage (https://backstage.wistia.cloud)
 
 site_name: nsq-ruby
-docs_dir: .
+docs_dir: docs
 plugins:
+  - simple
   - techdocs-core
-  - same-dir
